# wl-dock

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  postinst  postrm  wl-dock.1  wl-dock.desktop
.github/workflows/: build-image.yml  ci.yml  cmake-single-platform.yml  release.yml
docker/: Dockerfile.debian-trixie  Dockerfile.fedora-42
protocols/: wlr-foreign-toplevel-management-unstable-v1.xml
src/: ClockWidget.cpp  ClockWidget.h  DesktopIconResolver.cpp  DesktopIconResolver.h  DockController.cpp  DockController.h  DockTip.cpp  DockTip.h  DockWindow.cpp  DockWindow.h  ForeignToplevelManager.cpp  ForeignToplevelManager.h  TaskButton.cpp  TaskButton.h  TaskManager.cpp  TaskManager.h  main.cpp
src/sni/: SniDbusMenu.cpp  SniDbusMenu.h  SniIconButton.cpp  SniIconButton.h  SniItem.cpp  SniItem.h  SniMenu.cpp  SniMenu.h  SniTrayWidget.cpp  SniTrayWidget.h  SniTypes.h  SniWatcher.cpp  SniWatcher.h
